# assimpNotWorking

./: CMakeLists.txt
Config/: window.ini
res/models/invaders/crab/: crab.mtl
res/models/shield/: shield.mtl
res/models/ufo/: ufo.mtl
src/: Game.h
src/Display/: GLWindow.cpp  GLWindow.h
src/GUI/: Font.cpp  Font.h
src/Managers/: InvaderManager.cpp  InvaderManager.h
src/Models/Functionality/: Mesh.h  Model.cpp  Model.h
src/Player/: Camera.cpp  Camera.h  Player.cpp  Player.h
src/Shaders/: Program.h
src/States/Functionality/: State.h
src/States/GameStates/: PlayingState.cpp  PlayingState.h
src/Utilities/: FileLocations.h  Variables.h
